--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^6.0.13",
     "nodemailer": "^6.7.1",
     "nodemon": "^2.0.15",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   }
 }
