--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "technocrats robotics",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -20,7 +21,6 @@
     "mongoose": "^6.0.13",
     "nodemailer": "^6.7.1",
     "nodemon": "^2.0.15",
-    "react-icons": "^4.3.1",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   }
