--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
