--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "technocrats robotics",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
