--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^1.0.1"
   },
   "proxy": "http://localhost:8080",
