--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^3.2.0",
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
