--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.27.2",
     "immer": "^9.0.12",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notifications-component": "^3.1.0",
